Get the graphing mostly working

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/web/style.css">
     <script src="./src/web/script.js"></script>
-    <script src="./_gen_map.js"></script>
+    <script src="./gen_map.js"></script>
   </head>
   <body>
     <div class="content">
       <div class="header bg-secondary text-light">
         <h1>IRS Tax Map</h1>
-        <h3>Uhh, how do all those forms relate to each other?</h3>
+        <h4>Uhh, how do all those forms relate to each other?</h4>
       </div>
       <div class="map bg-light">
         <div id="map-content"></div>
