Less dumb subtitle, and favicon

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="./src/web/script.js"></script>
     <script src="./gen_map.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="lib/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="lib/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="lib/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
   </head>
   <body>
     <div class="content">
       <div class="header bg-secondary text-light">
         <h3>IRS Tax Map</h3>
-        <h5>Uhh, how do all those forms relate to each other?</h5>
+        <h5>A visualization of forms and schedules</h5>
       </div>
       <div class="map bg-light">
         <div id="details" class="details bg-light shadow-sm rounded hidden">
